public/css/mobile.css
* { 
    margin: 0px;
    padding: 0px;
}

body { 
}

body, div, td, input, select, textarea {
    font-family: Arial;
    color: #494949;
    font-size:16px;
}

h1 { 
    margin-bottom:20px;
}

input { 
    font-size:16px; 
}

a { 
    text-decoration: none;
    color:#494949;
    outline:none;
}

#wrapper {
    overflow:auto;
    padding-bottom:20px;
}

#secluded-login { 
    padding:20px;
}

#secluded-login label {
    display: block;
    margin-bottom:10px;
}

.welcome { 
    position:absolute;
    top:5px;
    right:5px;
}

.thread, .comment { 
    overflow:auto;
    position:relative;
    padding:5px 10px;
}

.comment { 
    border-bottom: 1px solid #ACE1F9;
}

.blueline {
    background-color: #ACE1F9;
    height: 1px;
    overflow: hidden;
	  clear: both;
}

.thread {
    background-color: #F5FBFE;
    margin:2px 0 2px 0;
    overflow:auto; 
}

.thread.alt {
    background-color: #F9FCFE;
}

.thread.buddy {
background-color: #EDF5E1;
}

.thread.enemy {
background-color: #FFEAEA;
display: none;
}

.thread.nsfw .subject-text a, .thread.nsfw .naughty-tag {
color: #F06171;
}



.subject-text {
    font-size: 18px; 
    font-weight:bold;
}
.subject { 
    margin-bottom:3px;
}
.username, .two { 
    float:left;
}

.two {
    width: 140px;
}
.two .username:before { 
    content: "By: ";
}
.three .username:before { 
    content: "Last: ";
}
.three .username:after, .two .username:after { 
    content: ", ";
}

.two div, .three div { 
    font-size:11px;
}
.two div, .three div, .two a, .three a { 
    color:#999;
}

.four { 
    position:absolute;
    top: 15px;
    right:10px;
}

.user-block .username a { 
    font-weight:bold;
}
.user-block { 
    overflow:auto;
}
.user-block .time { 
    margin-top:4px;
    font-size:12px;
    color:#999;
}
.username {
    margin-right:2px;
}
.comment .content { 
    padding: 5px 0 0 0;
}
.secluded-input {
    margin-bottom: 20px;
}
#thread form { 
    margin: 10px;
}
#thread form textarea {
    margin-bottom:10px;
}

#thread img{
    max-width: 100%;
}

.content-block a{
    text-decoration: underline;
}

.pagination.bottom { 
    padding:10px 0 10px 10px;
}

#header {
    background:#EDF5E1 url(/img/logo.gif) no-repeat 10px center;
    text-indent: -9999px;
    display:block;
    padding:10px;
    font-size: 24px;
    border-bottom:1px solid #DCD4C9;
}

#threads, .welcome { 
    overflow:auto;
}
#threads li, .welcome li {
    float:left;
    list-style:none;
}
#threads li a, .welcome li a {
    background: #444;
    color:#EEE;
    font-size:12px;
    /* border: 1px solid #AAA; */
    display: block;
    padding: 4px 6px;
    margin:8px;
    border-radius:5px;
    -moz-border-radius:5px;
}
.main-pagination { 
    overflow:auto;
}
.main-pagination a, .main-pagination div {
    background: none repeat scroll 0 0 #FFFFFF;
    border: 1px solid #999;
    display: block;
    padding: 5px 8px;
    float:left;
    margin-right:10px;
}
.main-pagination div { 
    background: #666;
}

#post-thread {
    display:block;
    margin-top:10px;
    font-weight:bold;
    text-decoration:underline;
}

#new-thread form input[type="submit"] { 
    margin-left:10px;
}

.inp { 
    padding:10px;
}
label { display:block; margin-bottom:5px; font-weight:bold;}

#category-selector { 
    overflow:auto;
}
#category-selector input { 
    display:block; 
    float:left; 
    width: 15px; 
    padding-top:5px;
    margin-right:10px; 
    height:20px;
}
#category-selector label { 
    display:block; 
    float:left; 
    width: 60px; 
    padding-bottom:15px; 
    margin-right:50px; 
    font-weight:normal;
}

#reply-lc { padding-left:10px; }

#main-title { 
    display:none;
}
#thread #main-title { 
    display:block;
    padding:10px 10px;
    text-align:center;
    background:#eee;
    border-bottom: 1px solid #ACE1F9;
}

#stats { 
    padding:10px;
}

form .textarea { 
    padding-right:5px;
}
    
#thread-content-input {
    
    height:120px;
    width:100%;
}

#secluded-invite, #messaging, #buddy-list,
.pagination.top, #thread-headers, .thread .category, .fourr, .five, 
#special-threads, .user-information, .cmd-bar, 
#thread-control, #threads h3, .welcome h4, .welcome > a, 
.welcome ul li:first-child, .paging-text, #threads, #new-thread p:first-child,
#post-shortcuts, #pinkies, #reply-rc p, #this-is-you, #information, #stats h3, 
#information-bio, #information-desc, #information-widget, #latest-posts    { 
    display:none; 
}

